Bilatu orrian aldaketak estiloetan

--- a/bistak/css/bilatu.css
+++ b/bistak/css/bilatu.css
@@ -2,3 +2,11 @@
     overflow: scroll !important;
     max-height: 60vh;
 }
+
+.akta{
+
+   /* background-color: #F2CC8F !important;
+    background-color: #81B29A !important;*/
+    background-color: #F4F1DE !important;
+
+}
