Bilatu-n aldaketa gehiago eta informazioa bistari bootstrap aplikatuta

--- a/bistak/css/main.css
+++ b/bistak/css/main.css
@@ -1,11 +1,26 @@
 :root {
-    --background-var: linear-gradient(180deg, rgba(255, 42, 42, 0.78), rgba(42, 3, 63, 0.3)), brown;
+    /*--background-var: linear-gradient(180deg, rgba(255, 42, 42, 0.78), rgba(42, 3, 63, 0.3)), brown;*/
    /* --background-var:  rgba(255, 42, 42, 0.7);*/
+   
+   --background-var: #e74c3c;
 
 }
 
 #emaitzen-lista{
 
 overflow-x: hidden !important;
+
+}
+
+.akta:hover{
+
+background-color: #ffec51 !important;
+
+
+}
+
+.akta{
+
+background-color: #fffbdb!important;
 
 }
