--- a/bistak/css/main.css
+++ b/bistak/css/main.css
@@ -14,7 +14,7 @@ overflow-x: hidden !important;
 
 .akta:hover{
 
-background-color: #ffec51 !important;
+background-color: #faef93 !important;
 
 
 }
