--- a/bistak/css/main.css
+++ b/bistak/css/main.css
@@ -1,3 +1,14 @@
 :root {
     --background-var: linear-gradient(90deg, rgba(0, 0, 0, 0.98), rgba(42, 3, 63, 0.3)), brown;
 }
+.nav {
+    height: 50px;
+    width: 100%;
+    background-color: #4d4d4d;
+    position: relative;
+    z-index: 1;
+}
+  
+.nav>.nav-btn {
+    display: none;
+}
